[gd_scene load_steps=6 format=2]

[ext_resource path="res://fontes/phantomstorm.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://codigos/mru.gd" type="Script" id=2]
[ext_resource path="res://imagens/estrelaZoe.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="mru" type="Node2D"]
script = ExtResource( 2 )

[node name="fundo" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.733333, 0.733333, 0.733333, 1 )

[node name="EstrelaZoe" type="Sprite" parent="."]
position = Vector2( 308, 292 )
texture = ExtResource( 3 )

[node name="controles" type="Node2D" parent="."]

[node name="fundocontroles" type="ColorRect" parent="controles"]
margin_right = 246.0
margin_bottom = 600.0
color = Color( 0.196078, 0.176471, 0.176471, 1 )

[node name="deslocamento" type="Label" parent="controles/fundocontroles"]
margin_top = 58.0
margin_right = 244.0
margin_bottom = 114.0
theme = SubResource( 2 )
text = "DESLOCAMENTO"
align = 1
valign = 1

[node name="unidade" type="Label" parent="controles/fundocontroles"]
margin_left = 139.0
margin_top = 106.0
margin_right = 225.0
margin_bottom = 171.0
theme = SubResource( 2 )
text = "METROS"
align = 1
valign = 1

[node name="resposta1" type="LineEdit" parent="controles/fundocontroles"]
margin_left = 31.0
margin_top = 115.0
margin_right = 133.0
margin_bottom = 163.0

[node name="velocidadem" type="Label" parent="controles/fundocontroles"]
margin_top = 178.0
margin_right = 245.0
margin_bottom = 234.0
theme = SubResource( 2 )
text = "VELOCIDADE MÃ‰DIA"
align = 1
valign = 1

[node name="resposta2" type="LineEdit" parent="controles/fundocontroles"]
margin_left = 33.0
margin_top = 238.0
margin_right = 134.0
margin_bottom = 286.0

[node name="unidade2" type="Label" parent="controles/fundocontroles"]
margin_left = 144.0
margin_top = 228.0
margin_right = 230.0
margin_bottom = 293.0
theme = SubResource( 2 )
text = "M/s"
align = 1
valign = 1

[node name="tempo" type="Label" parent="controles/fundocontroles"]
margin_left = 1.0
margin_top = 290.0
margin_right = 246.0
margin_bottom = 346.0
theme = SubResource( 2 )
text = "TEMPO"
align = 1
valign = 1

[node name="resposta3" type="LineEdit" parent="controles/fundocontroles"]
margin_left = 34.0
margin_top = 350.0
margin_right = 135.0
margin_bottom = 398.0

[node name="unidade3" type="Label" parent="controles/fundocontroles"]
margin_left = 132.0
margin_top = 349.0
margin_right = 242.0
margin_bottom = 397.0
theme = SubResource( 2 )
text = "SEG"
align = 1
valign = 1

[node name="calcular" type="Button" parent="controles/fundocontroles"]
margin_left = 41.0
margin_top = 443.0
margin_right = 212.0
margin_bottom = 487.0

[connection signal="pressed" from="controles/fundocontroles/calcular" to="." method="_on_calcular_pressed"]
